--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,14 @@
     <string name="bottom_ac_text">Account</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="app_name1">Login Screen</string>
+    <string name="hello_developer">Hello Developer!</string>
+    <string name="android_development_community">Android Development Community</string>
+    <string name="login">Login</string>
+    <string name="you_are_not_a_member_register">You are not a member? <b><font fgcolor='#3CDA85'>Register.</font></b></string>
+    <string name="nice_to_see_you">Nice to see you!</string>
+    <string name="email_hint1">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
